--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </nav>
         </header>
     <main>
-        <h2>All Christmas! All the time!  </h2>
+        <h2><script src="app.js"></script></h2>
         <img id="mainPic" src="https://images.unsplash.com/photo-1576234518488-20cd8742aad4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"/>
         <p>Whatever it is your searching for to get you in that feel good, Holly Jolly spirit. We got it!</p>
         <h3><strong>Eras</strong></h3>
