Added star question

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
   <meta charset="utf-8">
   <link href="style.css" rel="stylesheet">
+  <script src="app.js"></script>
     <title>FTLOC</title>
 </head>
 <!-- auto-format SHFT + ALT + F-->
@@ -22,9 +23,9 @@
         </nav>
         </header>
     <main>
-        <h2><script src="app.js"></script></h2>
+        <h2><script>createGreeting()</script></h2>
         <img id="mainPic" src="https://images.unsplash.com/photo-1576234518488-20cd8742aad4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"/>
-        <p>Whatever it is your searching for to get you in that feel good, Holly Jolly spirit. We got it!</p>
+        <p><script>displayStars()</script></p>
         <h3><strong>Eras</strong></h3>
         <ul>
             <li><img class="Thumbnail" src="https://images.unsplash.com/photo-1564596475441-addf241c6b1a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=830&q=80"></li>
